--- a/grace-hodgins.html
+++ b/grace-hodgins.html
@@ -23,10 +23,11 @@
   .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
   .grade-tier {font-size:.9rem;font-weight:600;}
 
+  /* Recommendation Pill */
   .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
     padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
   .pill-box {width:12px;height:12px;border-radius:3px;}
-  .pill-green {background:#22c55e;} /* TOP Recommendation */
+  .pill-green {background:#22c55e;} /* Top Recommendation */
 
   /* META */
   .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
@@ -37,7 +38,7 @@
     border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
   .meta-value {text-align:right;margin-left:1rem;}
 
-  /* CONTENT */
+  /* CONTENT SECTIONS */
   .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
     border:1px solid #dce2ee;margin-bottom:1.4rem;}
   .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
@@ -49,12 +50,12 @@
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
     <div>
       <h1 class="prospect-name">Grace Hodgins</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Wealth Management Prospect</p>
-      <p class="prospect-subtitle">UNC Chapel Hill · Swimming & Diving · Class of 2028</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">UNC-Chapel Hill · Swimming & Diving · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
@@ -71,15 +72,15 @@
     </div>
   </section>
 
-
-  <!-- META -->
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">UNC Chapel Hill</span></li>
         <li><span>Major</span><span class="meta-value">Business Administration</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Minor</span><span class="meta-value">Business Administration</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.8</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
@@ -94,66 +95,60 @@
         <li><span>Interview #1</span><span class="meta-value">87.10%</span></li>
         <li><span>Interview #2</span><span class="meta-value">96.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">86.50%</span></li>
-        <li><span>Personality</span><span class="meta-value">Goal Keeper</span></li>
+        <li><span>Personality</span><span class="meta-value">Goal Keeper (Disciplined, Structured)</span></li>
         <li><span>Leadership</span><span class="meta-value">Transactional Leader</span></li>
-        <li><span>Team Phase</span><span class="meta-value">Initiation Phase</span></li>
+        <li><span>Teamwork Style</span><span class="meta-value">Initiation → Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
+
   </section>
 
-
-  <!-- OVERVIEW -->
+  <!-- ================= OVERVIEW ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Grace is a disciplined and driven 4-star prospect with a rare blend of academic sharpness, international experience, 
-      and entrepreneurial initiative. As a Business Administration major with a 3.8 GPA, she operates with maturity, poise, 
-      and a thoughtful communication style that teams gravitate toward.
+      Grace is a mature, composed operator whose approach to work is structured, intentional, and rooted in accountability. As a Legacy Bowl
+      Captain finishing top 1% in superday interviews, she quickly established herself as someone who can organize teammates, communicate expectations,
+      and deliver cross-functional outputs at a high standard.  
       <br><br>
-      Through **Vireo Concepts**, she demonstrated business-building instincts early — sourcing sustainable materials, 
-      managing B2B conversations, and exploring commercial fit. Add to that international competitive swimming experience, 
-      leadership exposure through Carolina Leadership Initiative, and mentorship through Athlete to Athlete, and she profiles 
-      as a balanced, well-rounded contributor with upward trajectory.
+      Her resume reflects strong business fundamentals paired with meaningful exposure to leadership environments — both as a mentor 
+      and as someone trusted to lead national-level projects. Her entrepreneurial sustainability initiative and mentorship work reinforce 
+      her ownership mentality and ability to take a project from concept to execution.  
       <br><br>
-      In MAP she ranked **Top 3 / 65**, interviewing well with structured reasoning and confidence. While her case delivery 
-      phase ended unevenly as captain, it served as a productive rep in ownership and accountability — her upside remains high 
-      as she continues maturing into execution leadership.
+      While case execution in Round 2 did not land as strongly as expected under live-pressure deadlines, the body of work across the season shows high
+      capability, professionalism, and upward trajectory with continued structure and reps.
     </p>
   </section>
 
-
-  <!-- STRENGTHS -->
+  <!-- ================= STRENGTHS ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>3.8 GPA — strong foundational academic engine.</li>
-      <li>Entrepreneurial builder through sustainability venture **Vireo Concepts**.</li>
-      <li>Irish National Team swimmer — global competitive exposure.</li>
-      <li>Composed communicator — poised and professional.</li>
-      <li>Leadership experience (DiSC, Carolina Leadership Initiative, mentorship).</li>
-      <li>MAP Top 3 performance — high ceiling with strong behavioral interview output.</li>
+      <li>Structured operator — disciplined, organized, and deadline-reliable.</li>
+      <li>Strong teammate rapport — collaborative presence respected by peers.</li>
+      <li>High interview performance (96.2% Interview #2) — processes information well under questioning.</li>
+      <li>Entrepreneurial initiative — founded sustainability venture, negotiated B2B sourcing relationships.</li>
+      <li>Leadership pedigree — UNC athlete, mentor, captain experience across multiple environments.</li>
     </ul>
   </section>
 
-
-  <!-- DEVELOPMENT -->
+  <!-- ================= DEVELOPMENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue building confidence in leading execution through ambiguity.</li>
-      <li>Sharpen ownership cadence during fast-paced deliverables.</li>
-      <li>Layer finance terminology on top of strong business fundamentals.</li>
+      <li>Continue developing poise under real-time case pressure to match interview strengths.</li>
+      <li>Sharpen final-mile synthesis & storytelling for presentations.</li>
+      <li>Leverage initiative and leadership more vocally — skillset warrants confident executive presence.</li>
     </ul>
   </section>
 
-
-  <!-- PROJECTION -->
+  <!-- ================= PROJECTION ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Grace projects as a **Round 1–2 high-upside prospect** with maturity, coachability, and strong academic/athletic 
-      indicators. She fits naturally in client-facing WM/Private Banking/Advisory tracks — and with continued execution 
-      reps she could develop into a reliable culture leader and trusted analyst over time.
+      A high-floor Round 1–2 prospect with leadership maturity, structure, and reliability firms value.  
+      With continued live-case exposure and sharper top-down synthesis, she projects as a strong analyst with long-term upside in client-facing 
+      environments. A culturally additive teammate who raises standards through consistency and work ethic.
     </p>
   </section>
 
