--- a/makenna-stretz.html
+++ b/makenna-stretz.html
@@ -62,6 +62,7 @@
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">89</div>
       <div class="grade-tier">Round 2–3</div>
+
       <div class="recommendation-pill">
         <div class="pill-box pill-yellow"></div>
         <div class="pill-box pill-yellow"></div>
@@ -71,15 +72,15 @@
     </div>
   </section>
 
-
   <!-- ================= META ================= -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Science, Technology and Society</span></li>
-        <li><span>Minor</span><span class="meta-value">Innovation & Organization</span></li>
+        <li><span>Major</span><span class="meta-value">Science, Technology & Society</span></li>
+        <li><span>Concentration</span><span class="meta-value">Innovation & Organization</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.6</span></li>
         <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
@@ -94,75 +95,65 @@
         <li><span>Interview #1</span><span class="meta-value">95.30%</span></li>
         <li><span>Interview #2</span><span class="meta-value">95.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">96.10%</span></li>
-        <li><span>Personality</span><span class="meta-value">Hustler</span></li>
-        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Supportive)</span></li>
-        <li><span>Teamwork</span><span class="meta-value" id="teamworkField"></span></li>
+        <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative Problem-Solver)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader</span></li>
+        <li><span>Teamwork Style</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
       </ul>
     </div>
+
   </section>
 
-
-  <!-- ================= CONTENT ================= -->
+  <!-- ================= OVERVIEW ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Makenna is a high-motor operator with clear upward trajectory, known for her drive, responsiveness, and coachability.
-      She delivered one of the most consistent interview cycles in the cohort — all three interview scores landed above 95% — demonstrating
-      structured thinking, professionalism, and strong presence under pressure. Her STS academic track paired with her Innovation &
-      Organization concentration gives her a blend of analytical and product-oriented thinking that transfers well into client advisory
-      environments where context, pacing, and empathy matter.
+      Makenna is a high-motor operator with sharp presentation instincts, standout communication poise, and one of the strongest interview
+      profiles in the entire fellowship. Her Hustler identity shows up clearly — proactive, solutions-minded, and unafraid to take initiative.
       <br><br>
-      Her work ethic stands out. She actively sought feedback throughout the season, implemented changes quickly, and often operated as a
-      cultural spark plug — raising standards by example rather than volume. Her ceiling rises as she sharpens financial fluency and 
-      applies her instinct for creativity and problem-solving to technical deliverables.
+      A 2025 NCAA National Champion and engaged contributor in Stanford Women in Business, she blends competitive pedigree with real
+      leadership reps in youth philanthropy, event execution, and high-stakes student organizations. Her experience building business projects,
+      raising $110K for AAPLE scholarships, and structuring inventory work reflects resilience, strategic thinking, and tangible impact.
+      <br><br>
+      With interview scores all above 95% and strong technical absorption, she projects cleanly as a talent with upside, trajectory, and
+      coachability. Continued exposure to wealth advisory workflow and client-solution thinking will accelerate her path toward differentiating
+      herself as an early talent in the field.
     </p>
   </section>
 
+  <!-- ================= STRENGTHS ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Driven competitor with standout interview execution across all three rounds.</li>
-      <li>Strong initiative — consistently proactive, takes ownership, and responds well to coaching.</li>
-      <li>Creative problem-solver with STS + Innovation track well-aligned to client-facing work.</li>
-      <li>Positive energy and presence — helps elevate team dynamic and engagement.</li>
-      <li>Reliable follow-through and deadlines execution; strong season consistency signals.</li>
+      <li>Elite interview performance across all three rounds (95%+ consistently).</li>
+      <li>Hustler profile — proactive, resourceful, and solution-oriented.</li>
+      <li>Strong communication presence; confident presenter under pressure.</li>
+      <li>Leadership with real receipts — $110K raised in AAPLE scholarship efforts.</li>
+      <li>NCAA National Champion — competitive discipline and high motor.</li>
+      <li>Community-first mindset aligned with Servant Leader development arc.</li>
     </ul>
   </section>
 
+  <!-- ================= DEVELOPMENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Build more technical depth in wealth/portfolio concepts to match her communication skills.</li>
-      <li>Can occasionally rush early problem-framing — slowing down upfront raises output quality even further.</li>
-      <li>Continue refining case synthesis structure to maximize clarity and interpretive insight.</li>
+      <li>Continue building technical fluency in WM products to match communication strengths.</li>
+      <li>Refine structured slide-building frameworks for client-facing decks.</li>
+      <li>Develop deeper investment thesis language to push into top-15 tier ceiling.</li>
     </ul>
   </section>
 
+  <!-- ================= PROJECTION ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 2–3 talent with clear growth velocity and the personality fit firms value — competitive, personable, and responsive to coaching.
-      With added reps in wealth management fundamentals and continued exposure to client-facing environments, Makenna projects as a 
-      future high-trust teammate who contributes both execution and culture value. Her MAP profile signals durability,
-      upward momentum, and long-term upside.
+      A high-upside Round 2–3 prospect with real leadership receipts, elite interview marks, and Hustler motor. A strong fit for client-centric
+      rotational programs with long-term upside as a culture-driver. With continued technical execution reps, she has the toolkit to become a
+      front-of-class performer in wealth management recruiting environments.
     </p>
   </section>
 
 </div>
-
-<!-- TEAMWORK AUTO-MAP -->
-<script>
-  const PHASE = "Execution";
-  const teamworkByPhase = {
-    "Initiation": ["Cooperative", "Inclusive, Team-First"],
-    "Planning": ["Detail-Oriented", "Precise, Quality-Focused"],
-    "Execution": ["Idea-Oriented", "Creative, Strategic"],
-    "Control": ["Logical", "Analytical, Evidence-Based"],
-    "Monitoring": ["Supportive", "Steady, Reliable"]
-  };
-  document.getElementById("teamworkField").innerText =
-    `${teamworkByPhase[PHASE][0]} (${teamworkByPhase[PHASE][1]})`;
-</script>
-
 </body>
 </html>
+
