--- a/grace-hodgins.html
+++ b/grace-hodgins.html
@@ -54,8 +54,8 @@
   <section class="prospect-hero">
     <div>
       <h1 class="prospect-name">Grace Hodgins</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
-      <p class="prospect-subtitle">UNC-Chapel Hill · Swimming & Diving · Class of 2028</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Wealth Management Prospect</p>
+      <p class="prospect-subtitle">UNC Chapel Hill · Swimming & Diving · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
@@ -72,9 +72,9 @@
     </div>
   </section>
 
+
   <!-- ================= META ================= -->
   <section class="prospect-meta">
-
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -96,62 +96,49 @@
         <li><span>Interview #2</span><span class="meta-value">96.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">86.50%</span></li>
         <li><span>Personality</span><span class="meta-value">Goal Keeper (Disciplined, Structured)</span></li>
-        <li><span>Leadership</span><span class="meta-value">Transactional Leader</span></li>
-        <li><span>Teamwork Style</span><span class="meta-value">Initiation → Cooperative (Inclusive, Team-First)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Transactional Leader (Incentive-Driven, Standards-Based)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- ================= OVERVIEW ================= -->
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Grace is a mature, composed operator whose approach to work is structured, intentional, and rooted in accountability. As a Legacy Bowl
-      Captain finishing top 1% in superday interviews, she quickly established herself as someone who can organize teammates, communicate expectations,
-      and deliver cross-functional outputs at a high standard.  
-      <br><br>
-      Her resume reflects strong business fundamentals paired with meaningful exposure to leadership environments — both as a mentor 
-      and as someone trusted to lead national-level projects. Her entrepreneurial sustainability initiative and mentorship work reinforce 
-      her ownership mentality and ability to take a project from concept to execution.  
-      <br><br>
-      While case execution in Round 2 did not land as strongly as expected under live-pressure deadlines, the body of work across the season shows high
-      capability, professionalism, and upward trajectory with continued structure and reps.
+      Grace delivered one of the most consistent performance signals in the Legacy Bowl cohort — academically strong, deadline-reliable, and a four-star prospect who stood out early as someone who takes preparation seriously. Her interviews reflect steady professionalism with strong communication fundamentals and polish. Even though Round 2 of the case competition phase did not finish as cleanly as intended under her captaincy, her broader track record across assignments was steady, organized, and dependable — a profile firms trust.
     </p>
   </section>
 
-  <!-- ================= STRENGTHS ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Structured operator — disciplined, organized, and deadline-reliable.</li>
-      <li>Strong teammate rapport — collaborative presence respected by peers.</li>
-      <li>High interview performance (96.2% Interview #2) — processes information well under questioning.</li>
-      <li>Entrepreneurial initiative — founded sustainability venture, negotiated B2B sourcing relationships.</li>
-      <li>Leadership pedigree — UNC athlete, mentor, captain experience across multiple environments.</li>
+      <li>Strong academic foundation (3.8 GPA in Business Administration).</li>
+      <li>Reliable assignment execution and preparation consistency.</li>
+      <li>Clear communicator with presence and poise in interviews.</li>
+      <li>High ceiling when structure and expectations are well-defined.</li>
+      <li>Shows ownership and accountability in work product and deliverables.</li>
     </ul>
   </section>
 
-  <!-- ================= DEVELOPMENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue developing poise under real-time case pressure to match interview strengths.</li>
-      <li>Sharpen final-mile synthesis & storytelling for presentations.</li>
-      <li>Leverage initiative and leadership more vocally — skillset warrants confident executive presence.</li>
+      <li>Continue sharpening leadership under time pressure.</li>
+      <li>Work on maintaining structure during later-phase execution.</li>
+      <li>Lean into initiative more aggressively during ambiguity.</li>
     </ul>
   </section>
 
-  <!-- ================= PROJECTION ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A high-floor Round 1–2 prospect with leadership maturity, structure, and reliability firms value.  
-      With continued live-case exposure and sharper top-down synthesis, she projects as a strong analyst with long-term upside in client-facing 
-      environments. A culturally additive teammate who raises standards through consistency and work ethic.
+      A Round 1–2, four-star prospect with strong fundamentals and long-term upside. With continued practice in live execution settings, Grace profiles as a dependable analyst with professionalism, composure, and upward mobility — someone who could thrive in a high-accountability wealth management seat with structured mentorship.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
