--- a/makenna-stretz.html
+++ b/makenna-stretz.html
@@ -72,15 +72,15 @@
     </div>
   </section>
 
+
   <!-- ================= META ================= -->
   <section class="prospect-meta">
-
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Science, Technology & Society</span></li>
-        <li><span>Concentration</span><span class="meta-value">Innovation & Organization</span></li>
+        <li><span>Major</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
+        <li><span>Minor</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.6</span></li>
         <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
@@ -96,60 +96,50 @@
         <li><span>Interview #2</span><span class="meta-value">95.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">96.10%</span></li>
         <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative Problem-Solver)</span></li>
-        <li><span>Leadership</span><span class="meta-value">Servant Leader</span></li>
-        <li><span>Teamwork Style</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Supportive)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- ================= OVERVIEW ================= -->
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Makenna is a high-motor operator with sharp presentation instincts, standout communication poise, and one of the strongest interview
-      profiles in the entire fellowship. Her Hustler identity shows up clearly — proactive, solutions-minded, and unafraid to take initiative.
-      <br><br>
-      A 2025 NCAA National Champion and engaged contributor in Stanford Women in Business, she blends competitive pedigree with real
-      leadership reps in youth philanthropy, event execution, and high-stakes student organizations. Her experience building business projects,
-      raising $110K for AAPLE scholarships, and structuring inventory work reflects resilience, strategic thinking, and tangible impact.
-      <br><br>
-      With interview scores all above 95% and strong technical absorption, she projects cleanly as a talent with upside, trajectory, and
-      coachability. Continued exposure to wealth advisory workflow and client-solution thinking will accelerate her path toward differentiating
-      herself as an early talent in the field.
+      Makenna is a high-motor operator who consistently showed initiative, creativity, and ownership throughout the Legacy Bowl season. 
+      Her interview performance across all three rounds was one of the most stable profiles in the top half of the cohort, demonstrating 
+      strong communication, self-awareness, and preparedness. She brings the classic Hustler archetype — proactive, resourceful, competitive — 
+      paired with a Servant Leader mindset that keeps teammates supported and engaged. When given responsibility, she moves quickly and executes.
     </p>
   </section>
 
-  <!-- ================= STRENGTHS ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Elite interview performance across all three rounds (95%+ consistently).</li>
-      <li>Hustler profile — proactive, resourceful, and solution-oriented.</li>
-      <li>Strong communication presence; confident presenter under pressure.</li>
-      <li>Leadership with real receipts — $110K raised in AAPLE scholarship efforts.</li>
-      <li>NCAA National Champion — competitive discipline and high motor.</li>
-      <li>Community-first mindset aligned with Servant Leader development arc.</li>
+      <li>Top-tier interview performance across all rounds with strong consistency.</li>
+      <li>Proactive contributor who takes initiative rather than waiting for direction.</li>
+      <li>Creative thinker — generates ideas, solutions, and forward movement.</li>
+      <li>Reliable communicator with presence and coachability.</li>
+      <li>Team-first leadership instinct; supports others, keeps morale high.</li>
     </ul>
   </section>
 
-  <!-- ================= DEVELOPMENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue building technical fluency in WM products to match communication strengths.</li>
-      <li>Refine structured slide-building frameworks for client-facing decks.</li>
-      <li>Develop deeper investment thesis language to push into top-15 tier ceiling.</li>
+      <li>Can refine structured business writing to match her strong verbal clarity.</li>
+      <li>Continue developing technical finance fluency for deal-ready readiness.</li>
+      <li>With repetition, can evolve into a more confident live leader in ambiguous moments.</li>
     </ul>
   </section>
 
-  <!-- ================= PROJECTION ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A high-upside Round 2–3 prospect with real leadership receipts, elite interview marks, and Hustler motor. A strong fit for client-centric
-      rotational programs with long-term upside as a culture-driver. With continued technical execution reps, she has the toolkit to become a
-      front-of-class performer in wealth management recruiting environments.
+      A Round 2–3 prospect with strong upside and a competitive edge that scales with responsibility. Makenna’s idea-generation, 
+      energy, and interview presence make her a compelling culture add and long-term investment. With technical reps and structured practice, 
+      she profiles as someone who can thrive in a client-facing wealth management environment where initiative and follow-through matter.
     </p>
   </section>
 
