--- a/makenna-stretz.html
+++ b/makenna-stretz.html
@@ -5,143 +5,133 @@
 <title>Makenna Stretz — MAP Scouting Report</title>
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+.prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
-  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
+/* HERO */
+.prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+.prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+.prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+.prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
 
-  /* HERO */
-  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
-    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
-  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
-  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
-  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
+.prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+.grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+.grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+.grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
-    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
-  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
-  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
-  .grade-tier {font-size:.9rem;font-weight:600;}
+/* PILL */
+.recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+.pill-box {width:12px;height:12px;border-radius:3px;}
+.pill-yellow {background:#eab308;} /* Strong Recommendation */
 
-  /* Recommendation Pill */
-  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
-    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
-  .pill-box {width:12px;height:12px;border-radius:3px;}
-  .pill-yellow {background:#eab308;} /* Strong Recommendation */
+/* META */
+.prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+.meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+.meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+.meta-list {list-style:none;margin:0;padding:0;}
+.meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+.meta-value {text-align:right;margin-left:1rem;}
 
-  /* META */
-  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
-  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
-  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
-  .meta-list {list-style:none;margin:0;padding:0;}
-  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
-    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
-  .meta-value {text-align:right;margin-left:1rem;}
-
-  /* CONTENT SECTIONS */
-  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
-    border:1px solid #dce2ee;margin-bottom:1.4rem;}
-  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
-  .section-body {font-size:.9rem;line-height:1.52;}
-  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
+/* CONTENT */
+.prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+.section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+.section-body {font-size:.9rem;line-height:1.52;}
+.section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
 <body>
 <div class="prospect-page">
 
-  <!-- ================= HERO ================= -->
-  <section class="prospect-hero">
-    <div>
-      <h1 class="prospect-name">Makenna Stretz</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Wealth Management Prospect</p>
-      <p class="prospect-subtitle">Stanford University · Water Polo · Class of 2028</p>
+<!-- HERO -->
+<section class="prospect-hero">
+  <div>
+    <h1 class="prospect-name">Makenna Stretz</h1>
+    <p class="prospect-tagline">⭐️⭐️⭐️ Wealth Management Prospect</p>
+    <p class="prospect-subtitle">Stanford University · Water Polo · Class of 2028</p>
+  </div>
+
+  <div class="prospect-grade-card">
+    <div class="grade-label">MAP Prospect Grade</div>
+    <div class="grade-score">89</div>
+    <div class="grade-tier">Round 2–3</div>
+
+    <div class="recommendation-pill">
+      <div class="pill-box pill-yellow"></div>
+      <div class="pill-box pill-yellow"></div>
+      <div class="pill-box pill-yellow"></div>
+      <span>Strong Recommendation</span>
     </div>
+  </div>
+</section>
 
-    <div class="prospect-grade-card">
-      <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">89</div>
-      <div class="grade-tier">Round 2–3</div>
-
-      <div class="recommendation-pill">
-        <div class="pill-box pill-yellow"></div>
-        <div class="pill-box pill-yellow"></div>
-        <div class="pill-box pill-yellow"></div>
-        <span>Strong Recommendation</span>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- ================= META ================= -->
-  <section class="prospect-meta">
-    <div class="meta-column">
-      <h2 class="meta-title">Prospect Info</h2>
-      <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
-        <li><span>Minor</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
-        <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.6</span></li>
-        <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
-        <li><span>Hometown</span><span class="meta-value">Santa Barbara, CA</span></li>
-      </ul>
-    </div>
-
-    <div class="meta-column">
-      <h2 class="meta-title">MAP Profile</h2>
-      <ul class="meta-list">
-        <li><span>Fellowship Rank</span><span class="meta-value">4 / 65</span></li>
-        <li><span>Interview #1</span><span class="meta-value">95.30%</span></li>
-        <li><span>Interview #2</span><span class="meta-value">95.20%</span></li>
-        <li><span>Interview #3</span><span class="meta-value">96.10%</span></li>
-        <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative Problem-Solver)</span></li>
-        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Supportive)</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
-      </ul>
-    </div>
-  </section>
-
-
-  <!-- ================= CONTENT ================= -->
-  <section class="prospect-section">
-    <h2 class="section-title">Overview</h2>
-    <p class="section-body">
-      Makenna is a high-motor operator who consistently showed initiative, creativity, and ownership throughout the Legacy Bowl season. 
-      Her interview performance across all three rounds was one of the most stable profiles in the top half of the cohort, demonstrating 
-      strong communication, self-awareness, and preparedness. She brings the classic Hustler archetype — proactive, resourceful, competitive — 
-      paired with a Servant Leader mindset that keeps teammates supported and engaged. When given responsibility, she moves quickly and executes.
-    </p>
-  </section>
-
-  <section class="prospect-section">
-    <h2 class="section-title">Strengths</h2>
-    <ul class="section-list">
-      <li>Top-tier interview performance across all rounds with strong consistency.</li>
-      <li>Proactive contributor who takes initiative rather than waiting for direction.</li>
-      <li>Creative thinker — generates ideas, solutions, and forward movement.</li>
-      <li>Reliable communicator with presence and coachability.</li>
-      <li>Team-first leadership instinct; supports others, keeps morale high.</li>
+<!-- META -->
+<section class="prospect-meta">
+  <div class="meta-column">
+    <h2 class="meta-title">Prospect Info</h2>
+    <ul class="meta-list">
+      <li><span>School</span><span class="meta-value">Stanford University</span></li>
+      <li><span>Major</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
+      <li><span>Minor</span><span class="meta-value">Same as major concentration</span></li>
+      <li><span>Year</span><span class="meta-value">2028</span></li>
+      <li><span>GPA</span><span class="meta-value">3.6</span></li>
+      <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
+      <li><span>Hometown</span><span class="meta-value">Santa Barbara, CA</span></li>
     </ul>
-  </section>
+  </div>
 
-  <section class="prospect-section">
-    <h2 class="section-title">Areas for Development</h2>
-    <ul class="section-list">
-      <li>Can refine structured business writing to match her strong verbal clarity.</li>
-      <li>Continue developing technical finance fluency for deal-ready readiness.</li>
-      <li>With repetition, can evolve into a more confident live leader in ambiguous moments.</li>
+  <div class="meta-column">
+    <h2 class="meta-title">MAP Profile</h2>
+    <ul class="meta-list">
+      <li><span>Fellowship Rank</span><span class="meta-value">4 / 65</span></li>
+      <li><span>Interview #1</span><span class="meta-value">95.30%</span></li>
+      <li><span>Interview #2</span><span class="meta-value">95.20%</span></li>
+      <li><span>Interview #3</span><span class="meta-value">96.10%</span></li>
+      <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative Problem-Solver)</span></li>
+      <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Supportive)</span></li>
+      <li><span>Teamwork</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
     </ul>
-  </section>
+  </div>
+</section>
 
-  <section class="prospect-section">
-    <h2 class="section-title">Projection</h2>
-    <p class="section-body">
-      A Round 2–3 prospect with strong upside and a competitive edge that scales with responsibility. Makenna’s idea-generation, 
-      energy, and interview presence make her a compelling culture add and long-term investment. With technical reps and structured practice, 
-      she profiles as someone who can thrive in a client-facing wealth management environment where initiative and follow-through matter.
-    </p>
-  </section>
+<!-- CONTENT -->
+<section class="prospect-section">
+  <h2 class="section-title">Overview</h2>
+  <p class="section-body">
+    Makenna brings a strong mix of competitive pedigree, academic performance, and demonstrated leadership capacity — including winning the 2025 NCAA National Championship and MPSF title at Stanford. In MAP, she contributed meaningfully to a 5-person project focused on Morgan Stanley’s Parametric Custom Core Strategy, conducting market segmentation work and evaluating product viability for high-net-worth athletes and entertainers. She communicates with confidence, consistently interviews well, and shows initiative in live environments.
+    <br><br>
+    Beyond athletics, she has meaningful experience across retail operations, nonprofit administration, and venture pitch competitions. In high school she founded and chaired the AAPLE Corporate Giving Committee, raising $110K in scholarship funds — a commercial signal that indicates persuasion ability, resilience, and follow-through. Paired with 550+ hours of community leadership service and strong coursework in economics, managerial accounting, data & CS, she profiles as a young professional with drive, curiosity, and upward momentum.
+  </p>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Strengths</h2>
+  <ul class="section-list">
+    <li>National Champion athlete with proven competitive discipline and pressure tolerance.</li>
+    <li>Strong interview performance across three rounds — polished communication and confidence.</li>
+    <li>Hands-on experience designing HNW wealth solutions and evaluating parametric investment strategy fit.</li>
+    <li>Leadership under real stakes — raised $110,000 in corporate funding and led 30 peers in pitch execution.</li>
+    <li>Versatile background across sales, budgeting, Excel inventory, and operational management.</li>
+    <li>Initiative-driven — thrives when given ownership, deadlines, and room to execute creatively.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Areas for Development</h2>
+  <ul class="section-list">
+    <li>Continue growing formal finance toolset (valuation, modeling, market assessment frameworks).</li>
+    <li>Writing and presentation flow can tighten — clarity improves when structure is defined upfront.</li>
+    <li>High upside — consistency will scale further as systems and technical reps increase.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Projection</h2>
+  <p class="section-body">
+    A Round 2–3 MAP prospect with meaningful upside. Makenna has the competitive fire, leadership evidence, and early exposure to HNW wealth work where athlete-to-wealth translation matters. With continued technical development and deeper financial training, she projects as a long-run asset for a wealth management team who values initiative, energy, and client-facing drive — the type who gets better every quarter she’s in seat.
+  </p>
+</section>
 
 </div>
 </body>
