--- a/bailey-oregan.html
+++ b/bailey-oregan.html
@@ -77,8 +77,8 @@
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Management Science & Engineering</span></li>
-        <li><span>Minor</span><span class="meta-value">Management Science & Engineering</span></li>
+        <li><span>Major</span><span class="meta-value">Design Human Behavior</span></li>
+        <li><span>Minor</span><span class="meta-value">Multistakeholder Research</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.39</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
