--- a/grace-hodgins.html
+++ b/grace-hodgins.html
@@ -80,7 +80,7 @@
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">UNC Chapel Hill</span></li>
         <li><span>Major</span><span class="meta-value">Business Administration</span></li>
-        <li><span>Minor</span><span class="meta-value">Business Administration</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.8</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
