--- a/makenna-stretz.html
+++ b/makenna-stretz.html
@@ -72,8 +72,8 @@ body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
     <h2 class="meta-title">Prospect Info</h2>
     <ul class="meta-list">
       <li><span>School</span><span class="meta-value">Stanford University</span></li>
-      <li><span>Major</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
-      <li><span>Minor</span><span class="meta-value">Same as major concentration</span></li>
+      <li><span>Major</span><span class="meta-value">Science, Technology & Society</span></li>
+      <li><span>Minor</span><span class="meta-value">Innovation & Organization</span></li>
       <li><span>Year</span><span class="meta-value">2028</span></li>
       <li><span>GPA</span><span class="meta-value">3.6</span></li>
       <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
