--- a/shelly-zinchenko.html
+++ b/shelly-zinchenko.html
@@ -78,7 +78,7 @@ padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:
     <ul class="meta-list">
       <li><span>School</span><span class="meta-value">Carnegie Mellon University</span></li>
       <li><span>Major</span><span class="meta-value">Business Administration</span></li>
-      <li><span>Minor</span><span class="meta-value">Statistics</span></li>
+      <li><span>Minor</span><span class="meta-value">Business Analytics</span></li>
       <li><span>Year</span><span class="meta-value">2028</span></li>
       <li><span>GPA</span><span class="meta-value">3.8</span></li>
       <li><span>Sport</span><span class="meta-value">Tennis</span></li>
