--- a/sophia-smith.html
+++ b/sophia-smith.html
@@ -77,8 +77,8 @@ padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:
     <h2 class="meta-title">Prospect Info</h2>
     <ul class="meta-list">
       <li><span>School</span><span class="meta-value">Washington University in St. Louis</span></li>
-      <li><span>Major</span><span class="meta-value">Finance & Economics</span></li>
-      <li><span>Minor</span><span class="meta-value">Business Analytics</span></li>
+      <li><span>Major</span><span class="meta-value">Psychology</span></li>
+      <li><span>Minor</span><span class="meta-value">Economics</span></li>
       <li><span>Year</span><span class="meta-value">2028</span></li>
       <li><span>GPA</span><span class="meta-value">3.84</span></li>
       <li><span>Sport</span><span class="meta-value">Soccer</span></li>
@@ -104,7 +104,7 @@ padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:
 <section class="prospect-section">
   <h2 class="section-title">Overview</h2>
   <p class="section-body">
-    Sophia was one of the most consistently engaged and dependable fellows across the entire Legacy Bowl — always on-time, communicative, responsive to feedback, and someone MAP Student Support repeatedly referred to as a standout teammate. With a 3.84 GPA in Finance & Economics, a Business Analytics minor, and experience through the London School of Economics, she brings real academic horsepower alongside the discipline of a 2024 NCAA National Champion.
+    Sophia was one of the most consistently engaged and dependable fellows across the entire Legacy Bowl — always on-time, communicative, responsive to feedback, and someone MAP Student Support repeatedly referred to as a standout teammate. With a 3.84 GPA in Psychology & Economics, a Business Analytics minor, and experience through the London School of Economics, she brings real academic horsepower alongside the discipline of a 2024 NCAA National Champion.
     <br><br>
     Her MAP performance reflects maturity and ownership — managing 20+ deliverables within her parametric strategy workstream, contributing to product-market fit assessments and client segmentation for HNW athletes and entertainers. Outside of MAP, she has strong client-facing experience (Talbots, Coldstone), digital marketing strategy exposure (Tangible Impact — CRO + analytics), and meaningful leadership evidence — raising over <b>$100,000</b> for LLS, tutoring students for four years, and leading youth programming initiatives. She is reliable, composed, approachable, and projects positively in professional environments.
   </p>
@@ -114,7 +114,7 @@ padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:
   <h2 class="section-title">Strengths</h2>
   <ul class="section-list">
     <li>Top 10% selection + highly engaged throughout the fellowship with excellent MAP rapport.</li>
-    <li>3.84 GPA in Finance/Econ + National Champion → strong time management + discipline.</li>
+    <li>3.84 GPA in Psychology/Econ + National Champion → strong time management + discipline.</li>
     <li>Raised $100K for LLS — elite fundraising & stakeholder communication track record.</li>
     <li>Owns deliverables and deadlines — managed +20 MAP workstream tasks reliably.</li>
     <li>Digital marketing experience with CRO, analytics, and competitive research capability.</li>
