--- a/collin-moore.html
+++ b/collin-moore.html
@@ -49,7 +49,7 @@
   <section class="prospect-hero">
     <div>
       <h1 class="prospect-name">Collin Moore</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ — Track & Field Prospect</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️ — Wealth Management Prospect</p>
       <p class="prospect-subtitle">Columbia University · Track & Field · Class of 2028</p>
     </div>
 
