--- a/collin-moore.html
+++ b/collin-moore.html
@@ -74,8 +74,8 @@
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Columbia University</span></li>
-        <li><span>Major</span><span class="meta-value">Cognitive Science</span></li>
-        <li><span>Minor</span><span class="meta-value">Cognitive Science</span></li>
+        <li><span>Major</span><span class="meta-value">Psychology</span></li>
+        <li><span>Minor</span><span class="meta-value">Economics</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.81</span></li>
         <li><span>Sport</span><span class="meta-value">Track & Field</span></li>
