--- a/shelly-zinchenko.html
+++ b/shelly-zinchenko.html
@@ -52,7 +52,7 @@ padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:
 <section class="prospect-hero">
   <div>
     <h1 class="prospect-name">Shelly Zinchenko</h1>
-    <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking & Wealth Management Prospect</p>
+    <p class="prospect-tagline">⭐️⭐️⭐️ Wealth Management Prospect</p>
     <p class="prospect-subtitle">Carnegie Mellon University · Tennis · Class of 2028</p>
   </div>
 
