--- a/carson-krichman.html
+++ b/carson-krichman.html
@@ -10,30 +10,29 @@
   body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
   .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  .prospect-hero {
-    display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem;
-    padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;
+  .prospect-hero{
+    display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;
   }
-  .prospect-name { font-family:'Archivo Black'; font-size:2rem; margin:0 0 .25rem; text-transform:uppercase;}
-  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
-  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
+  .prospect-name{font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
+  .prospect-tagline{margin:0;font-size:1rem;font-weight:600;}
+  .prospect-subtitle{margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-grade-card {
-    min-width:200px; padding:1rem 1.25rem; border-radius:12px;
-    background:rgba(255,255,255,.15); border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);
+  .prospect-grade-card{
+    min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);
   }
-  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
-  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
-  .grade-tier{ font-size:.9rem; font-weight:600;}
-  .grade-note{ font-size:.75rem; opacity:.9;}
+  .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.1rem 0;}
+  .grade-tier{font-size:.9rem;font-weight:600;}
+  .grade-note{font-size:.75rem;opacity:.85;}
 
   .recommendation-pill{
-    display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084;
-    padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600;
-    font-size:.78rem; margin-top:.55rem; width:fit-content;
+    display:inline-flex;align-items:center;gap:5px;background:#fff;color:#2E5084;
+    padding:4px 10px;border:1px solid #dce2ee;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;
   }
   .pill-box{width:12px;height:12px;border-radius:3px;}
-  .pill-red{background:#ef4444;} .pill-yellow{background:#eab308;} .pill-green{background:#22c55e;}
+  .pill-red{background:#ef4444;}
 
   .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
   .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
@@ -45,7 +44,8 @@
   .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
   .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
   .section-body{font-size:.9rem;line-height:1.52;}
-  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} 
+  .section-list li{margin-bottom:.38rem;}
 </style>
 </head>
 
@@ -77,13 +77,12 @@
 
   <!-- META -->
   <section class="prospect-meta">
-
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Temple University</span></li>
         <li><span>Major</span><span class="meta-value">Finance</span></li>
-        <li><span>Minor</span><span class="meta-value">MIS</span></li>
+        <li><span>Minor</span><span class="meta-value">Information Systems</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.83</span></li>
         <li><span>Sport</span><span class="meta-value">Rowing</span></li>
@@ -98,19 +97,18 @@
         <li><span>Interview #1</span><span class="meta-value">92.40%</span></li>
         <li><span>Interview #2</span><span class="meta-value">88.90%</span></li>
         <li><span>Interview #3</span><span class="meta-value">81.90%</span></li>
-        <li><span>Personality</span><span class="meta-value">Point Guard</span></li>
-        <li><span>Leadership</span><span class="meta-value">Democratic Leader</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Monitoring Phase — Supportive (Steady, Reliable)</span></li>
+        <li><span>Personality</span><span class="meta-value">Point Guard (Steady, Big-Picture Thinker)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Monitoring → Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
-
   </section>
 
   <!-- OVERVIEW -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Carson brings commercial instincts and real revenue traction — recognized as top sales rep at Dobson Fiber and contributing $300K+ in pipeline impact through Freedom Solar. He operates confidently in customer-facing environments and communicates well, supported by a 3.83 GPA in Finance and leadership as a Temple Men’s Crew coxswain. When focused, he produces strong work and shows initiative; developing consistency in instruction adherence and deliverable polish will unlock his next tier of professional readiness within wealth management.
+      Carson brings commercial instincts and real revenue traction — recognized as top sales rep at Dobson Fiber and contributing $300K+ in pipeline through Freedom Solar. Confident in client-facing environments, he pairs strong communication skills with a 3.83 GPA in Finance and MIS. He performs well when engaged; tightening consistency in instruction-following and deliverable polish will elevate his readiness for PWM and make his output more reliably client-ready.
     </p>
   </section>
 
@@ -118,12 +116,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Proven sales performer with revenue-driving experience</li>
-      <li>Strong communicator; competitive and confident in client settings</li>
-      <li>Coxswain leadership → strategic clarity under pressure</li>
-      <li>Solid Finance foundation (3.83 GPA + MIS minor)</li>
-      <li>Event operations + partnership coordination experience</li>
-      <li>High upside if execution consistency strengthens</li>
+      <li>Proven sales performer with revenue-driving track record</li>
+      <li>Strong communicator in customer-facing settings</li>
+      <li>Coxswain leadership experience under pressure</li>
+      <li>3.83 GPA in Finance + MIS minor — solid academic base</li>
+      <li>Event and partnership coordination experience</li>
+      <li>Meaningful upside with improved execution consistency</li>
     </ul>
   </section>
 
@@ -131,9 +129,9 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Increase consistency in deliverable polish and detail quality</li>
-      <li>Strengthen structured formatting + client-ready presentation</li>
-      <li>Continue building finance fluency and product understanding</li>
+      <li>Increase consistency in deliverable polish & adherence</li>
+      <li>Sharpen structured writing and formatting</li>
+      <li>Expand finance product fluency</li>
     </ul>
   </section>
 
@@ -141,10 +139,11 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 3–4 Watchlist profile with upward potential. Carson's sales instincts, communication strength, and leadership make him a natural relationship-builder in PWM. With steadier execution and quality control, he can evolve into a compelling client-facing candidate.
+      Round 3–4 Watchlist profile with upward potential — communication skills and sales foundation translate naturally to PWM. As consistency improves, he projects as a viable future client-facing candidate.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
