--- a/xavier-giles.html
+++ b/xavier-giles.html
@@ -2,43 +2,37 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Jason Bright — MAP Scouting Report</title>
+<title>Xavier Giles — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  body{margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
-  .prospect-page{max-width:960px;margin:0 auto 3rem;padding:1.5rem 1rem;color:#1a1a1a;}
+  .prospect-hero{display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
 
-  .prospect-hero{
-    display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
-    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;
-  }
   .prospect-name{font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
-  .prospect-tagline{margin:0;font-size:1rem;font-weight:600;}
+  .prospect-tagline{margin:0 0 .15rem;font-size:1rem;font-weight:600;}
   .prospect-subtitle{margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-grade-card{
-    min-width:200px;padding:1rem 1.25rem;border-radius:12px;
-    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);
-  }
+  .prospect-grade-card{min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
   .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
   .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.15rem 0;}
   .grade-tier{font-size:.9rem;font-weight:600;}
   .grade-note{font-size:.75rem;opacity:.9;}
 
-  .recommendation-pill{
-    display:inline-flex;align-items:center;gap:5px;background:#fff;color:#2E5084;
-    padding:4px 10px;border:1px solid #dce2ee;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;
-  }
+  .recommendation-pill{display:inline-flex;align-items:center;gap:5px;background:#fff;color:#2E5084;
+    padding:4px 10px;border:1px solid #dce2ee;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
   .pill-box{width:12px;height:12px;border-radius:3px;}
-  .pill-red{background:#ef4444;}
+  .pill-yellow{background:#eab308;}
 
   .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
   .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
-  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
   .meta-list{list-style:none;padding:0;margin:0;}
-  .meta-list li{display:flex;justify-content:space-between;padding:.3rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
   .meta-value{text-align:right;margin-left:1rem;}
 
   .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
@@ -55,97 +49,111 @@
   <!-- HERO -->
   <section class="prospect-hero">
     <div>
-      <h1 class="prospect-name">Jason Bright</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐ Wealth Management Prospect</p>
-      <p class="prospect-subtitle">Emory University · Track & Field · Class of 2028</p>
+      <h1 class="prospect-name">Xavier Giles</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ — Wealth Management Prospect</p>
+      <p class="prospect-subtitle">Princeton University · Wrestling · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">81</div>
-      <div class="grade-tier">Round 3-4</div>
-      <div class="grade-note">Watchlist Recommendation</div>
-
+      <div class="grade-score">87</div>
+      <div class="grade-tier">Round 2-3</div>
+      <div class="grade-note">Strong Recommendation</div>
+  
       <div class="recommendation-pill">
-        <div class="pill-box pill-red"></div>
-        <div class="pill-box pill-red"></div>
-        <div class="pill-box pill-red"></div>
-        <span>Watchlist Recommendation</span>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <span>Strong Recommendation</span>
       </div>
     </div>
   </section>
 
-  <!-- META -->
+
+  <!-- META BLOCKS -->
   <section class="prospect-meta">
 
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">Emory University</span></li>
-        <li><span>Major</span><span class="meta-value">Finance</span></li>
-        <li><span>Minor</span><span class="meta-value">Sociology</span></li>
+        <li><span>School</span><span class="meta-value">Princeton University</span></li>
+        <li><span>Major</span><span class="meta-value">Economics</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.82</span></li>
-        <li><span>Sport</span><span class="meta-value">Track & Field</span></li>
-        <li><span>Hometown</span><span class="meta-value">Merrick, NY</span></li>
+        <li><span>GPA</span><span class="meta-value">3.7</span></li>
+        <li><span>Sport</span><span class="meta-value">Wrestling</span></li>
+        <li><span>Hometown</span><span class="meta-value">Bronx, NY</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fellowship Rank</span><span class="meta-value">17 / 65</span></li>
-        <li><span>Interview #1</span><span class="meta-value">95.30%</span></li>
-        <li><span>Interview #2</span><span class="meta-value">100.00%</span></li>
-        <li><span>Interview #3</span><span class="meta-value">93.60%</span></li>
-        <li><span>Personality</span><span class="meta-value">Behind the Scenes (Reserved, Detail-Oriented)</span></li>
+        <li><span>Fellowship Rank</span><span class="meta-value">10 / 65</span></li>
+        <li><span>Interview #1 Grade</span><span class="meta-value">95.30%</span></li>
+        <li><span>Interview #2 Grade</span><span class="meta-value">96.20%</span></li>
+        <li><span>Interview #3 Grade</span><span class="meta-value">89.40%</span></li>
+        <li><span>Personality</span><span class="meta-value">Two-Way Player (Adaptive, Socially Fluent)</span></li>
         <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Initiation → Cooperative (Inclusive, Team-First)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Idea-Oriented (Creative, Strategic)</span></li>
       </ul>
     </div>
-
   </section>
+
+
 
   <!-- OVERVIEW -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Jason opened the program as one of our strongest early prospects — polished communicator, confident interview presence, and strong technical foundation for his age. He stepped away during Phase 2 for personal reasons, but during his active window, he consistently performed near the top of the cohort, showing strong potential in diligence, markets thinking, and presentation. Venture sourcing experience, emerging markets research, and entrepreneurial revenue generation highlight initiative and upside. If re-engaged fully, Jason projects as a high-ceiling candidate with room to return to top-tier trajectory.
+      Xavier is an adaptable, socially fluent Two-Way Player archetype with strong communication capacity, a collaborative leadership 
+      style, and a rapidly developing interest in finance. With a 3.7 GPA in Economics at Princeton and high-level competitive demands 
+      as a Division I wrestler, he demonstrates discipline, resilience, and an ability to manage heavy workload environments — traits 
+      that translate well into Wealth Management advisory culture. His experience at Privero Capital Partners introduced him to 
+      hedge fund strategy, risk analysis, and options-based investing language, while two summers at a legal firm developed client 
+      interaction maturity, professionalism, and service-oriented execution. During Legacy Bowl, Xavier excelled in interviews 
+      (95.3% • 96.2% • 89.4%), consistently demonstrating poise, strong vocal communication, and coachability.
     </p>
   </section>
+
 
   <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Started as a top performer with strong MAP momentum</li>
-      <li>Excellent interview presence — structured, confident delivery</li>
-      <li>Venture due diligence + emerging markets exposure early</li>
-      <li>Entrepreneurial experience with revenue generation</li>
-      <li>Strong academic base — 3.82 GPA Finance + Sociology</li>
-      <li>Leadership in multiple campus organizations</li>
+      <li>Strong interview performer — polished communicator with presence and emotional intelligence.</li>
+      <li>Economics foundation + exposure to hedge fund risk concepts & options frameworks.</li>
+      <li>Leadership experience across athletics, BSAC, and Eagle Scout — responsibility under pressure.</li>
+      <li>High work ethic and grit developed through Division I wrestling training demands.</li>
+      <li>Client-service exposure from legal and salon roles — people-facing maturity.</li>
+      <li>Adaptive team player capable of navigating diverse environments and groups.</li>
+      <li>Emerging investment interest with willingness to learn technical tools.</li>
     </ul>
   </section>
 
-  <!-- DEVELOPMENT -->
+
+  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Rebuild consistency after stepping away in Phase 2</li>
-      <li>Continue sharpening technical finance rigor</li>
-      <li>More reps to translate polish into full-cycle execution</li>
+      <li>Continue building modeling fluency and valuation mechanics (comp models, DCF structure).</li>
+      <li>Expand technical exposure beyond introductory investment language to applied execution.</li>
+      <li>Develop portfolio storytelling & client narrative framing for PWM discussions.</li>
     </ul>
   </section>
+
 
   <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 3–4 Watchlist with Round 2 upside potential. Jason’s foundation is strong — early performance indicated high trajectory. With consistent re-engagement, he has the tools to climb quickly and re-establish himself as a top candidate.
+      Round 2-3 projection with clear upside as a People-Forward WM prospect. Xavier’s interviews, leadership experience, and 
+      disciplined athletic profile make him a strong long-term candidate with relationship-based potential. With continued technical 
+      skill development and increased exposure to real portfolio work, he projects as a future relationship manager or advisory 
+      executor capable of owning client conversations over time.
     </p>
   </section>
 
 </div>
 </body>
 </html>
-
