--- a/carson-krichman.html
+++ b/carson-krichman.html
@@ -98,7 +98,7 @@
         <li><span>Interview #3</span><span class="meta-value">81.90%</span></li>
         <li><span>Personality</span><span class="meta-value">Point Guard (Steady, Big-Picture Thinker)</span></li>
         <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Monitoring → Supportive (Steady, Reliable)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
   </section>
