--- a/jason-bright.html
+++ b/jason-bright.html
@@ -99,7 +99,7 @@
         <li><span>Interview #3</span><span class="meta-value">93.60%</span></li>
         <li><span>Personality</span><span class="meta-value">Behind the Scenes (Reserved, Detail-Oriented)</span></li>
         <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Initiation → Cooperative (Inclusive, Team-First)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
 
