--- a/lily-ruitong-zhang.html
+++ b/lily-ruitong-zhang.html
@@ -60,7 +60,7 @@
 <section class="prospect-hero">
   <div>
     <h1 class="prospect-name">Ruitong (Lily) Zhang</h1>
-    <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Pro Bowl IB Fellow</p>
+    <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ All-Star Investment Banking Prospect</p>
     <p class="prospect-subtitle">University of Pennsylvania · Swimming & Diving · Class of 2028</p>
   </div>
 
