--- a/carly-hamilton.html
+++ b/carly-hamilton.html
@@ -52,8 +52,8 @@
 <section class="prospect-hero">
   <div>
     <h1 class="prospect-name">Carly Hamilton</h1>
-    <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Pro Bowl IB Fellow — D1 Skiing</p>
-    <p class="prospect-subtitle">Boston College · Finance · Class of 2028</p>
+    <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ All-Star Investment Banking Prospect</p>
+    <p class="prospect-subtitle">Boston College · Skiing · Class of 2028</p>
   </div>
 
   <div class="prospect-grade-card">
